# gRPC-test-task

./: .gitignore  README.md  arq_cron.Dockerfile  arq_worker.Dockerfile  beat.Dockerfile  compose.yaml  worker.Dockerfile
arq_cron/: arq_app.py  pyproject.toml
arq_cron/src/: config.py
arq_cron/src/database/: core.py
arq_worker/: arq_app.py  pyproject.toml
arq_worker/pb/: line_provider_pb2.py  line_provider_pb2.pyi  line_provider_pb2_grpc.py
arq_worker/src/: config.py
arq_worker/src/database/: models.py
arq_worker/src/dependencies/grpc/: score.py
arq_worker/src/services/: exceptions.py  utils.py
celery_beat/: celery_app.py  pyproject.toml
celery_beat/src/: config.py
celery_worker/: celery_app.py  pyproject.toml
line_provider/: Dockerfile  grpc_server.py  main.py  pyproject.toml
line_provider/app/: config.py
line_provider/app/database/: core.py  models.py  repository.py
line_provider/app/database/repository/: event.py  score.py
line_provider/app/schemas/: event.py  score.py
line_provider/app/services/: event.py  exceptions.py  utils.py
line_provider/pb/: line_provider_pb2.pyi  line_provider_pb2_grpc.py
line_provider/protos/: line_provider_pb2_grpc.py  score_maker.proto
line_provider/services/: event.py
score_maker/: Dockerfile  main.py  pyproject.toml
score_maker/app/: config.py
score_maker/app/database/: core.py  models.py  repository.py
score_maker/app/dependencies/: database.py
score_maker/app/dependencies/grpc/: event.py
score_maker/app/routers/: event_router.py  score_router.py
score_maker/app/schemas/: event.py  score.py
score_maker/pb/: line_provider_pb2_grpc.py
score_maker/protos/: line_provider.proto  line_provider_pb2.py  line_provider_pb2_grpc.py
