[tool.poetry]
name = "score_maker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
SQLAlchemy = "^2.0.35"
grpcio = "^1.66.2"
grpcio-tools = "^1.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
